Css and html chnages
i added the css file to html and i changed the background for the body in the html to beige. This was my test for using git desktop on a different device(This was on my laptop).

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>This is going to bea odd attempt at making a website.</h1>  
+  <h1>This is going to bea odd attempt at making a website.</h1>
+  <p>It is mainly going to be text with a bit of <em>css</em> as this iis me tryin git out for the first time.</p>  
 </body>
 </html>
